[gd_scene load_steps=5 format=3 uid="uid://nfw6cy1ol6wn"]

[ext_resource type="Script" path="res://src/ConveyorAssembly/curved_roller_conveyor_assembly.gd" id="1_0vkx8"]
[ext_resource type="PackedScene" uid="uid://c3cdcxifx4eej" path="res://parts/CurvedRollerConveyor.tscn" id="2_1qr7y"]
[ext_resource type="PackedScene" uid="uid://c1dcpxt5x65et" path="res://parts/SideGuardsCBC.tscn" id="3_8k5xq"]
[ext_resource type="PackedScene" uid="uid://b3j6k7x4h8rpg" path="res://parts/assemblies/CurvedRollerConveyorLegsAssembly.tscn" id="4_roller_legs"]

[node name="CurvedRollerConveyorAssembly" type="Node3D"]
script = ExtResource("1_0vkx8")
speed = 2.0
reference_distance = 0.5
conveyor_angle = 90.0
speed_tag_group_name = ""
running_tag_group_name = ""
size = Vector3(1.524, 0.5, 1.524)

[node name="ConveyorCorner" parent="." instance=ExtResource("2_1qr7y")]

[node name="ConveyorLegsAssembly" parent="ConveyorCorner" instance=ExtResource("4_roller_legs")]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 7.7486e-07, -2, 0)

[node name="SideGuardsCBC" parent="." instance=ExtResource("3_8k5xq")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.246, 0)
size = Vector3(1.5600001, 4, 1)

[connection signal="ready" from="ConveyorCorner" to="." method="_on_instantiated"]
